# office-crab

./: Cargo.toml  README.md  local.txt  office2john.py  package-lock.json  package.json
doc/: 1_test_password.md  2_password_gen.md  3_multithreading.md  4_aws_tests.md
performance-summary/: package-lock.json  package.json  summary.xlsx  tsconfig.json
performance-summary/src/: describeInstanceType.ts  generateSummarySheet.ts  getPerformanceFiles.ts  initGetInstancePrice.ts  main.ts  toTestResult.ts
samples/: sample_1MB.xlsx
scripts/: ec2-performance.sh  generate-summary.sh  launch-performance-instance.sh  list-instances.sh  local-performance.sh  performance.sh  upload-bins.sh
src/: char_sets.rs  lib.rs  main.rs  nth_password.rs  setup_dependencies.rs  test_password.rs  test_password_async.rs
