[package]
name = "office-password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
office-crypto = "0.1.0"
rayon = "1.8.0"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.16.0"
# [[bin]]

[target.x86_64-unknown-linux-gnu]

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"
ar = "aarch64-linux-gnu-ar"
